Shang New Live/src/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Account_No_Local__c</fullName>
        <label>Account No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Opening_Date__c</fullName>
        <label>Actual Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <inlineHelpText>The address information will be displayed in PDF invoice.
Maximum 5 rows are recommended!</inlineHelpText>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Air_cond_operation_time__c</fullName>
        <label>Air-cond operation time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Budgeted_Revenue__c</fullName>
        <label>Annual Budgeted Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Committed_Revenue__c</fullName>
        <label>Annual Committed Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Plot_Ratio__c</fullName>
        <label>Approved Plot Ratio</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Valuation__c</fullName>
        <label>Asset Valuation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <description>Bank account number</description>
        <label>Account No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Address_Local__c</fullName>
        <label>Bank Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Address__c</fullName>
        <description>Address of bank</description>
        <label>Bank Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Name_Local__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <description>Name of Bank</description>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Currency__c</fullName>
        <label>Base Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Beneficiary_Name_Local__c</fullName>
        <label>Beneficiary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Name__c</fullName>
        <description>Name of recipient</description>
        <label>Beneficiary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <label>Billing Currency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Due_Days__c</fullName>
        <label>Billing Due Days</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Day</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <description>Bank branch code</description>
        <label>Swift Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Name_Local__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <description>Name of branch</description>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COA Group</label>
        <referenceTo>COA_Group__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Park_Lots_Indoor__c</fullName>
        <label>Car Park Lots (Indoor)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Car_Park_Lots_Outdoor__c</fullName>
        <label>Car Park Lots (Outdoor)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_Receipt_Index__c</fullName>
        <label>Cash Receipt Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IA issues</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clu__c</fullName>
        <inlineHelpText>corporate definition</inlineHelpText>
        <label>Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comm_Tax__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>Comm Tax (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Construction_Floor_Area_SQF__c</fullName>
        <label>Construction Floor Area (SQF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construction_Floor_Area_SQM__c</fullName>
        <formula>Construction_Floor_Area_SQF__c  / 10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Construction Floor Area (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Multi_Meters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Multi Meters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Valuation__c</fullName>
        <label>Date of Valuation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Index__c</fullName>
        <label>Deposit Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Refund_Index__c</fullName>
        <label>Deposit Refund Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBITDA_Yield_on_Cost__c</fullName>
        <label>EBITDA Yield on Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBITDA_Yield_on_Valuation__c</fullName>
        <label>EBITDA Yield on Valuation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Efficiency_Ratio__c</fullName>
        <formula>NLA_SQF__c /  GFA_SQF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Efficiency Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Year__c</fullName>
        <description>Used in trigger to control Lease Plan creation under Active Units</description>
        <inlineHelpText>Select year to generate Lease Plan and Rent Schedules.</inlineHelpText>
        <label>Lease Plan/RS End Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eq_Svc_Contract_Index__c</fullName>
        <label>Eq Svc Contract Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment_Index__c</fullName>
        <label>Equipment Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Cost_Base__c</fullName>
        <label>Finance Cost (Base)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Cost_Currency_Code__c</fullName>
        <label>Finance Cost Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MMK</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>RMB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Cost_Ex_Rate__c</fullName>
        <label>Finance Cost Ex Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Cost__c</fullName>
        <label>Finance Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GFA_SQF__c</fullName>
        <label>GFA (SQF)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GFA_SQM__c</fullName>
        <formula>GFA_SQF__c / 10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GFA (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GOP_Yield_on_Cost__c</fullName>
        <label>GOP Yield on Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GOP_Yield_on_Valuation__c</fullName>
        <label>GOP Yield on Valuation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel_Rooms_Fitted_Out__c</fullName>
        <label>Hotel Rooms (Fitted Out)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hotel_Rooms_Not_Fitted_Out__c</fullName>
        <label>Hotel Rooms (Not Fitted Out)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Investment_Cost__c</fullName>
        <label>Investment Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Index__c</fullName>
        <label>Invoice Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Journal_Batch_Index__c</fullName>
        <label>Journal Batch Index</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Journal_Entry_Index__c</fullName>
        <label>Journal Entry Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Journal_Voucher_Index__c</fullName>
        <label>Journal Voucher Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOI_Index__c</fullName>
        <label>LOI Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOI_Unit_Index__c</fullName>
        <label>LOI Unit Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOI_Validity_Week__c</fullName>
        <label>LOI Validity (Week)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOI_Validity_Week</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Land_Cost_Base__c</fullName>
        <label>Land Cost (Base)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Land_Cost_Currency_Code__c</fullName>
        <label>Land Cost Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MMK</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>RMB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Land_Cost_Ex_Rate__c</fullName>
        <label>Land Cost Ex Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Land_Cost__c</fullName>
        <label>Land Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Land_Cost_psm_GFA__c</fullName>
        <description>Land Cost divded by GFA SQM</description>
        <formula>Land_Cost__c  /  GFA_SQM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Land Cost GFA (PSM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Land_Tenure__c</fullName>
        <label>Land Tenure</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Landlord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Landlord</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Landlords_Authorized_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Landlord’s Authorized Agent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Management Company)</relationshipLabel>
        <relationshipName>Properties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this option only if you want system to run automated Late Charge Batch at the end of the month for this Property.</inlineHelpText>
        <label>Late Charge Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Late_Charge_By__c</fullName>
        <inlineHelpText>if By Month, will prorate with no of days of the month.
if 30 Days, will prorate with 30 days.</inlineHelpText>
        <label>Late Charge By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 Days</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>By Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leasable_Area_SQF__c</fullName>
        <inlineHelpText>Leasable area (for commercial / office)</inlineHelpText>
        <label>Leasable Area (SQF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leasable_Area_SQM__c</fullName>
        <formula>Leasable_Area_SQF__c / 10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leasable Area (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Agreement_Index__c</fullName>
        <label>Lease Agreement Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Title__c</fullName>
        <label>Lease Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LeaseHold</fullName>
                </value>
                <value>
                    <fullName>FreeHold 999 years</fullName>
                </value>
                <value>
                    <fullName>FreeHold 99 years</fullName>
                </value>
                <value>
                    <fullName>FreeHold 60 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <label>LegacyId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Logo_image__c</fullName>
        <formula>IF(ISBLANK( Logo__c ),&quot;&quot;, IMAGE(Logo__c , &quot;Icon&quot;, 80,300) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_No__c</fullName>
        <label>Lot No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Valuation_Date__c</fullName>
        <label>Market Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Value__c</fullName>
        <label>Market Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Master_Plan_Zone__c</fullName>
        <label>Master Plan Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Gross_Floor_Area_SQF__c</fullName>
        <label>Maximum Gross Floor Area (SQF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Gross_Floor_Area_SQM__c</fullName>
        <formula>Maximum_Gross_Floor_Area_SQF__c / 10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Gross Floor Area (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Size__c</fullName>
        <label>Module Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NLA_SQF__c</fullName>
        <label>NLA (SQF)</label>
        <summarizedField>Units__c.NLA_SQF__c</summarizedField>
        <summaryForeignKey>Units__c.Property__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NLA_SQM__c</fullName>
        <formula>NLA_SQF__c /10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NLA (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Ballrooms__c</fullName>
        <label>No of Ballrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Basement__c</fullName>
        <label>No of Basement</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_F_B_outlets__c</fullName>
        <label>No of F&amp;B outlets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Storeys_Above_Ground__c</fullName>
        <label>No of Storeys Above Ground</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Storeys__c</fullName>
        <label>No of Storeys</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POS_Id_Index__c</fullName>
        <label>POS ID Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Account)</relationshipLabel>
        <relationshipName>ChildProperties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Voucher_Index__c</fullName>
        <label>Payment Voucher Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Company_Name__c</fullName>
        <formula>Project_Company__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Project Holding Company)</relationshipLabel>
        <relationshipName>Holding_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Cost_Base__c</fullName>
        <label>Project Cost (Base)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Cost_Currency_Code__c</fullName>
        <label>Project Cost Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MMK</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>RMB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Cost_Ex_Rate__c</fullName>
        <label>Project Cost Ex Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Cost__c</fullName>
        <label>Project Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project In Charge</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties (Project In Charge)</relationshipLabel>
        <relationshipName>Properties_PIC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Certificate__c</fullName>
        <label>Property Certificate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>In-progress</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Remarks__c</fullName>
        <label>Remarks</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region_Hub__c</fullName>
        <inlineHelpText>A - Urban
B - Suburban
C - Others</inlineHelpText>
        <label>Region Hub</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Different property</description>
        <inlineHelpText>Please select the Township.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks_Credit_Note__c</fullName>
        <label>Remarks (Credit Note)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks_Other_Invoices__c</fullName>
        <inlineHelpText>Used to be display in Invoice PDF (Late Charge &amp; CN)</inlineHelpText>
        <label>Remarks (Other Invoices)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <inlineHelpText>Used to display in Invoice PDF.
Not applicable for (CN &amp; Late Charge).</inlineHelpText>
        <label>Invoice Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rent_Roll_Index__c</fullName>
        <label>Rent Roll Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Index__c</fullName>
        <label>Request Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_s_Percentage__c</fullName>
        <label>SA&apos;s Percentage Ownership</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Index__c</fullName>
        <label>Service Contract Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Code__c</fullName>
        <externalId>true</externalId>
        <label>Short Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Area_SQF__c</fullName>
        <label>Site Area (SQF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Area_SQM__c</fullName>
        <formula>Site_Area_SQF__c / 10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Area (SQM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Swift_Code_Local__c</fullName>
        <label>Swift Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Opening_Date__c</fullName>
        <label>Target Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Index__c</fullName>
        <label>Task Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tenure_Commencing_Date__c</fullName>
        <label>Tenure Commencing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Carpark_s__c</fullName>
        <label>Total Car Park(s)</label>
        <summaryFilterItems>
            <field>Location__c.Location_Type__c</field>
            <operation>equals</operation>
            <value>Car Park</value>
        </summaryFilterItems>
        <summaryForeignKey>Location__c.Property__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Development_Cost_GFA_SQF__c</fullName>
        <formula>Total_Development_Cost__c  /  GFA_SQF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Development Cost per GFA (SFT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Development_Cost_GFA_SQM__c</fullName>
        <formula>Total_Development_Cost__c  /   GFA_SQM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Development Cost per GFA (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Development_Cost__c</fullName>
        <description>Sum of (Base): Finance Cost + Project Cost + Land Cost</description>
        <formula>IF (   OR( RecordType.Name = &quot;Mixed Development&quot;, RecordType.Name = &quot;Hotel&quot;) , 
Finance_Cost__c  +  Land_Cost__c  +  Project_Cost__c,
 Finance_Cost_Base__c +   Land_Cost_Base__c   +  Project_Cost_Base__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Development Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>